--- a/MyCalendar/pom.xml
+++ b/MyCalendar/pom.xml
@@ -70,7 +70,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>calendar.Main</mainClass>
+                    <mainClass>calendar.app.Main</mainClass>
                 </configuration>
             </plugin>
 
