--- a/MyCalendar/pom.xml
+++ b/MyCalendar/pom.xml
@@ -48,6 +48,18 @@
             <version>2.15.2</version>
         </dependency>
 
+        <!-- JavaFX dependencies -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>21</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>21</version>
+        </dependency>
+
     </dependencies>
 
     <build>
